added metaclf doc

--- a/doc/subord.tex
+++ b/doc/subord.tex
@@ -164,6 +164,8 @@ Proof: By induction on the structure of the trace $\eps$.
 
 \begin{itemize}
 \item Case: $\eps = \nileps$. $\eps_1 = \eps_2 = \nileps$. \checkmark
+% XXX more details below about well-formedness of epsilons in their
+% respective signatures
 \item Case: $\eps = \{p\}\gets R; \eps'$\\
   By Lemma (below), either 
   \[ \Delta \vdash_{\Sigma_1} R : A \]
