--- a/doc/thesis.bib
+++ b/doc/thesis.bib
@@ -2667,3 +2667,76 @@ year={2002}
   year =         2012,
   number =       "CMU-CS-12-142"
 }
+
+@article{Leroux2010VASReach,
+  author    = {J{\'{e}}r{\^{o}}me Leroux},
+  title     = {The General Vector Addition System Reachability Problem by Presburger
+               Inductive Invariants},
+  journal   = {Logical Methods in Computer Science},
+  year      = {2010},
+  volume    = {6},
+  number    = {3},
+  url       = {http://dx.doi.org/10.2168/LMCS-6(3:22)2010},
+  doi       = {10.2168/LMCS-6(3:22)2010},
+  timestamp = {Wed, 01 Oct 2014 19:57:16 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1009-1076},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{fribourg2000petri,
+  title={Petri Nets, Flat Languages and Linear Arithmetic.},
+  author={Fribourg, Laurent},
+  organization={Citeseer}
+}
+
+@inproceedings{Leroux2013PresburgerVAS,
+  author    = {J{\'{e}}r{\^{o}}me Leroux},
+  title     = {Presburger Vector Addition Systems},
+  booktitle = {28th Annual {ACM/IEEE} Symposium on Logic in Computer Science, {LICS}
+               2013, New Orleans, LA, USA, June 25-28, 2013},
+  year      = {2013},
+  pages     = {23--32},
+  url       = {http://doi.ieeecomputersociety.org/10.1109/LICS.2013.7},
+  doi       = {10.1109/LICS.2013.7},
+  timestamp = {Wed, 01 Oct 2014 19:59:27 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/lics/Leroux13},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{kanovich1995petri,
+  title={Petri nets, Horn programs, linear logic and vector games},
+  author={Kanovich, Max I},
+  journal={Annals of Pure and Applied Logic},
+  volume={75},
+  number={1},
+  pages={107--135},
+  year={1995},
+  publisher={Elsevier}
+}
+
+@inproceedings{SacerdoteTenney1977,
+ author = {Sacerdote, George S. and Tenney, Richard L.},
+ title = {The Decidability of the Reachability Problem for Vector Addition Systems (Preliminary Version)},
+ booktitle = {Proceedings of the Ninth Annual ACM Symposium on Theory of Computing},
+ series = {STOC '77},
+ year = {1977},
+ location = {Boulder, Colorado, USA},
+ pages = {61--76},
+ numpages = {16},
+ url = {http://doi.acm.org/10.1145/800105.803396},
+ doi = {10.1145/800105.803396},
+ acmid = {803396},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@article{karp1969parallel,
+  title={Parallel program schemata},
+  author={Karp, Richard M and Miller, Raymond E},
+  journal={Journal of Computer and system Sciences},
+  volume={3},
+  number={2},
+  pages={147--195},
+  year={1969},
+  publisher={Elsevier}
+}
